<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="company_photo">Company Photo</string>
    <string name="company_name">Udacity</string>
    <string name="phone_number">650&#8211;555&#8211;5555</string>
    <string name="company_website">www.udacity.com</string>
    <string name="address_1">2465 Latham St</string>
    <string name="address_2">Mountain View, CA 94043</string>
</resources>
